fix #30
extra space removed

--- a/includes/css/arconix-shortcodes.css
+++ b/includes/css/arconix-shortcodes.css
@@ -21,6 +21,7 @@ loaded in place of the plugin's version and will maintain your changes on upgrad
   position: relative !important;
   top: -22px !important;
   left: 25px !important;
+  margin-bottom: -15px;
 }
 /* Accordion Title */
 .arconix-accordion-title {
